# stm32f4-pack

./: CMakeLists.txt  README.md  postinst
cmake/: arm-toolchain.cmake
template/: CMakeLists.txt
template/include/: stm32f4xx_hal_conf.h
template/src/: auxiliary.c  main.c
